# best_lang

./: .gitignore  CMakeLists.txt  Makefile  README.md  report.md
examples/: correct_programs.bl  error_programs.bl  factorial.bl  guide_01_basics.bl  guide_02_control.bl  guide_03_strings.bl  guide_04_arrays.bl  guide_05_structs.bl  guide_06_advanced.bl  hello.bl  insertion_sort.bl  new_features.bl  reference.bl  runtime_errors.bl  sort.bl  structs.bl  types.bl
specs/: codegen.md  grammar_lex.md  grammar_syn.md  semantics.md  types.md
src/: ast.hpp  blvm_main.cpp  codegen.cpp  codegen.hpp  ir.hpp  lexer.cpp  lexer.hpp  lowering.cpp  lowering.hpp  main.cpp  optimizer.cpp  optimizer.hpp  parser.cpp  parser.hpp  semantic.cpp  semantic.hpp  types.hpp  vm.cpp  vm.hpp
